@@ -1,41 +1,0 @@
-/**
-* @author Francesco di Dio
-* Date: 12/nov/2010 15.25.46
-* Titolo: SerializedOffscreenImage.java
-* Versione: 0.1 Rev.a:
-*/
-
-
-/*
- * Copyright (c) 2010 Francesco di Dio.
- * tabuto83@gmail.com 
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */
-
- /*
-  * Inserisci qui breve descrizione in italiano della classe
-  */
-
-package com.tabuto.j2dgf.gui;
-
-import java.awt.Image;
-import java.io.Serializable;
-
-
-public abstract class SerializedOffscreenImage extends Image implements Serializable {
-
-	public SerializedOffscreenImage() {super();}
-	
-}
